Update to list items across the site - Fixes incorrect application of Style Manual guidance. - Adds small spacing between `<li>`s. - Adds margin to bottom of `.ds-callout`. - Fixes wording on Awards page.

--- a/src/sass/base/_base.callout.scss
+++ b/src/sass/base/_base.callout.scss
@@ -1,6 +1,7 @@
 // Callout
 
 .ds-callout {
+  margin-bottom: 1rem;
   .ds-dark & {
     background-color: transparentize($foreground-dark, 0.5);
   }
