--- a/src/sass/base/_base.typography.scss
+++ b/src/sass/base/_base.typography.scss
@@ -20,6 +20,12 @@ p {
   }
 }
 
+ul, ol {
+  li {
+    margin: 0.4rem 0;
+  }
+}
+
 .btn.ds-button {
   font-weight: bold;
   margin: 1rem 0;
